--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -59,6 +59,9 @@ a {
   background-color: #159957;
   background-image: linear-gradient(120deg, #155799, #159957); }
 
+.generator {
+  color: #000000;
+}
 @media screen and (min-width: 64em) {
   .page-header {
     padding: 5rem 6rem; } }
