--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -59,7 +59,7 @@ a {
   background-color: #159957;
   background-image: linear-gradient(120deg, #155799, #159957); }
 
-.generator {
+.generator input {
   color: #000000;
 }
 @media screen and (min-width: 64em) {
